# rust-hctr2

./: .gitignore  Cargo.toml  README.md
src/: chctr2.rs  common.rs  cross_check.rs  hctr2.rs  hctr2_twkd.rs  hctr2fp.rs  hctr3.rs  hctr3fp.rs  lib.rs
